New Guides JS + Layout

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.19/themes/dot-luv/jquery-ui.css" type="text/css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.2.js"></script>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.js"></script>
+	<script src="http://us.battle.net/d3/static/js/tooltips.js"></script>
 	<?= $this->headCss()
 			->appendStylesheet("/css/style.css")
 			->appendStylesheet("/css/chosen.css")
@@ -107,8 +108,8 @@
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
 					<b>System Message</b>: 
-					Sept 2 - 
-					Adding your build to D3Up.com just got a lot easier! Automatically import your profile from the armory on build creation or start from scratch, just <a href="/build/create">click here to get started</a>. Also, here's the <a href="/update/27">patch notes</a>.
+					Sept 6 - 
+ 					Attention Guide Creators! The skills in your guide have moved to the bottom, but you can move them wherever you want now! The interface has changed a bit too, please read the update's <a href="/update/29">patch notes</a> for all the changes.
 					Please report anything missing/wrong to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
 				</div>
 			</div>
