--- a/application/views/scripts/guide/view.phtml
+++ b/application/views/scripts/guide/view.phtml
@@ -113,4 +113,4 @@ window.d3up['voted'] = false;
 </script>
 
 <script type="text/javascript" src="/js/jquery.cleditor.js"></script>
-<script type="text/javascript" src="/js/unmin/guide.js"></script>
+<script type="text/javascript" src="/js/unmin/guide.js?v=<?= time() ?>"></script>
