--- a/application/views/scripts/guide/view.phtml
+++ b/application/views/scripts/guide/view.phtml
@@ -26,6 +26,7 @@
 			<a href="/guide/<?= $this->guide->id ?>/<?= $this->guide->slug ?>/edit" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button">Edit Title</a>
 			<a class="saveGuide ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button">Save</a>
 			<a href="/guide/<?= $this->guide->id ?>/<?= $this->guide->slug ?>/" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button">Cancel</a>
+			<a href="/guide/<?= $this->guide->id ?>/<?= $this->guide->slug ?>/revisions" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button">Revisions</a>
 		</div>
 		<div class="sub-control">
 			<a href="#" id="minAll">Minimize All Sections</a>
