New layout start

--- a/application/views/scripts/item/pricer.phtml
+++ b/application/views/scripts/item/pricer.phtml
@@ -26,7 +26,7 @@
 			    <option value="2h-mace" label="Two-Handed Mace">Two-Handed Mace</option>
 			    <option value="2h-axe" label="Two-Handed Axe">Two-Handed Axe</option>
 			    <option value="bow" label="Bow">Bow</option>
-			    <option value="diabo" label="Diabo">Diabo</option>
+			    <option value="daibo" label="Daibo">Daibo</option>
 			    <option value="crossbow" label="Crossbow">Crossbow</option>
 			    <option value="2h-mighty" label="Two-Handed Mighty Weapon">Two-Handed Mighty Weapon</option>
 			    <option value="polearm" label="Polearm">Polearm</option>
