--- a/application/views/scripts/item/sales-history.phtml
+++ b/application/views/scripts/item/sales-history.phtml
@@ -46,7 +46,7 @@
 		    <option label="Two-Handed Mace" value="2h-mace">Two-Handed Mace</option>
 		    <option label="Two-Handed Axe" value="2h-axe">Two-Handed Axe</option>
 		    <option label="Bow" value="bow">Bow</option>
-		    <option label="Diabo" value="diabo">Diabo</option>
+		    <option label="Daibo" value="daibo">Daibo</option>
 		    <option label="Crossbow" value="crossbow">Crossbow</option>
 		    <option label="Two-Handed Mighty Weapon" value="2h-mighty">Two-Handed Mighty Weapon</option>
 		    <option label="Polearm" value="polearm">Polearm</option>
