--- a/application/layouts/scripts/menu/user.phtml
+++ b/application/layouts/scripts/menu/user.phtml
@@ -5,16 +5,16 @@
 		<h2 style="margin-bottom: 0">Quick Access</h2>
 	</div>
 	<div class="col_1">
-		<h2>Builds</h2>
+		<h2>My Builds</h2>
 	</div>
 	<div class="col_1">
-		<h2>Guides</h2>
+		<h2>My Guides</h2>
 	</div>
 	<div class="col_1">
-		<p><a class="button" href="/user/builds">Builds</a></p>
-		<p><a class="button" href="/user/guides">Guides</a></p>
-		<p><a class="button" href="/user/items">Items</a></p>
-		<p><a class="button" href="/user/edit">Profile</a></p>
+		<p><a class="button" href="/user/builds">My Builds</a></p>
+		<p><a class="button" href="/user/guides">My Guides</a></p>
+		<p><a class="button" href="/user/items">My Items</a></p>
+		<p><a class="button" href="/user/edit">My Profile</a></p>
 		<p><a class="button" href="/user/logout">Logout</a></p>
 	</div>
 	<div class="col_1">
