More layout changes, still more to go

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,9 +1,10 @@
-<div class="content-sidebar content-page">
-	<div class="page">
-		<div>sidebar</div>
-	</div>
+<div class="content-sidebar">
+	<?= $this->render("./index/_sidebar.phtml") ?>
 </div>
-<div class="content-page with-sidebar">
+<div class="home content-page with-sidebar ui-helper-clearfix">
+	<div class="page">rawr</div>
+	<div class="page">rawr</div>
+	<div class="page">rawr</div>
 	<div class="page">rawr</div>
 	<div class="page">rawr</div>
 	<div class="page">rawr</div>
