--- a/application/views/scripts/post/_sidebar.phtml
+++ b/application/views/scripts/post/_sidebar.phtml
@@ -1,4 +1,4 @@
-<div class='ui-widget ui-widget-content ui-corner-all'>
+<div class='page'>
 	<h3>What is D3Up?</h3>
 	<p>D3Up is designed as a tool to help you find information about Items, a place to create varies Character Builds, and compare your items to determine which stats will change.</p>
 </div>
