--- a/application/views/scripts/post/types/update.phtml
+++ b/application/views/scripts/post/types/update.phtml
@@ -1,7 +1,7 @@
 <?
 $this->headTitle("Update ".$this->post->version); 
 ?>
-<div class="d3up-post ui-widget ui-widget-content ui-corner-all" id="<?= $this->post->_type ?>-<?= $this->post->id ?>">
+<div class="d3up-post page" id="<?= $this->post->_type ?>-<?= $this->post->id ?>">
 	<div class="meta"><?= $this->timeAgo($this->post->_created) ?></div>
 	<h3><a href="/update/<?= $this->post->id ?>">Update <?= $this->post->version ?></a></h3>
 	<div class="post-body">
