--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -108,9 +108,9 @@
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
 					<b>System Message</b>: 
-					Sept 6 - 
- 					Attention Guide Creators! The skills in your guide have moved to the bottom, but you can move them wherever you want now! The interface has changed a bit too, please read the update's <a href="/update/30">patch notes</a> for all the changes.
-					Please report anything missing/wrong to <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
+					Sept 10 - 
+ 					Major system update coming sometime this week(end?), including a better design/layout and a lot of features that have been requested by users. If you want a feature in, post it in the feedback tab and I'll do my best.
+					Please report any bugs/problems/issues to me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
 				</div>
 			</div>
 		</div>
