--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -108,8 +108,9 @@
 				</div>
 				<div id="sys-message" class="ui-widget ui-widget-content ui-corner-all">
 					<b>System Message</b>: 
-					Sept 10 - 
- 					Major system update coming sometime this week(end?), including a better design/layout and a lot of features that have been requested by users. If you want a feature in, post it in the feedback tab and I'll do my best.
+					Sept 11 - 
+					<strong>Battle.net Imports now import your paragon level!</strong>
+ 					Major system update coming sometime this week(end?), including a new layout and lots of features that have been requested by users.
 					Please report any bugs/problems/issues to me at <a href="mailto:aaron.cox@greymass.com">aaron.cox@greymass.com</a>!
 				</div>
 			</div>
