--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -2,7 +2,8 @@
 	<?= $this->render("./index/_sidebar.phtml") ?>
 </div>
 <div class="home content-page with-sidebar ui-helper-clearfix">
-	<div class="page">rawr</div>
+  <?= $this->render("./index/widgets/guides-featured.phtml") ?>
+  <?= $this->render("/index/widgets/guides.phtml")?>
 	<div class="page">rawr</div>
 	<div class="page">rawr</div>
 	<div class="page">rawr</div>
