--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -984,6 +984,7 @@ tr.compared > td:first-child {
 	color: #777;
 	font-weight: bold;
 	float: right;
+	text-align: center;
 }
 .skill-calc-row .effects:first-child {
 	margin-top: 5px;
